; ModuleID = '/home/carl/AnghaBench/reactos/sdk/lib/crt/stdio/extr_file.c_get_ioinfo_alloc.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/lib/crt/stdio/extr_file.c_get_ioinfo_alloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i64, i32 }

@MSVCRT_MAX_FILES = common dso_local global i32 0, align 4
@__badioinfo = common dso_local global %struct.TYPE_6__ zeroinitializer, align 8
@INVALID_HANDLE_VALUE = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [19 x i8] c":files exhausted!\0A\00", align 1
@ENFILE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.TYPE_6__* (i32*)* @get_ioinfo_alloc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.TYPE_6__* @get_ioinfo_alloc(i32* %0) #0 {
  %2 = alloca %struct.TYPE_6__*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_6__*, align 8
  store i32* %0, i32** %3, align 8
  %6 = load i32*, i32** %3, align 8
  store i32 -1, i32* %6, align 4
  store i32 0, i32* %4, align 4
  br label %7

7:                                                ; preds = %46, %1
  %8 = load i32, i32* %4, align 4
  %9 = load i32, i32* @MSVCRT_MAX_FILES, align 4
  %10 = icmp slt i32 %8, %9
  br i1 %10, label %11, label %49

11:                                               ; preds = %7
  %12 = load i32, i32* %4, align 4
  %13 = call %struct.TYPE_6__* @get_ioinfo_nolock(i32 %12)
  store %struct.TYPE_6__* %13, %struct.TYPE_6__** %5, align 8
  %14 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %15 = icmp eq %struct.TYPE_6__* %14, @__badioinfo
  br i1 %15, label %16, label %24

16:                                               ; preds = %11
  %17 = load i32, i32* %4, align 4
  %18 = call i32 @alloc_pioinfo_block(i32 %17)
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %21, label %20

20:                                               ; preds = %16
  store %struct.TYPE_6__* @__badioinfo, %struct.TYPE_6__** %2, align 8
  br label %53

21:                                               ; preds = %16
  %22 = load i32, i32* %4, align 4
  %23 = call %struct.TYPE_6__* @get_ioinfo_nolock(i32 %22)
  store %struct.TYPE_6__* %23, %struct.TYPE_6__** %5, align 8
  br label %24

24:                                               ; preds = %21, %11
  %25 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %26 = call i32 @init_ioinfo_cs(%struct.TYPE_6__* %25)
  %27 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %28 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %27, i32 0, i32 1
  %29 = call i64 @TryEnterCriticalSection(i32* %28)
  %30 = icmp ne i64 %29, 0
  br i1 %30, label %31, label %45

31:                                               ; preds = %24
  %32 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %33 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %32, i32 0, i32 0
  %34 = load i64, i64* %33, align 8
  %35 = load i64, i64* @INVALID_HANDLE_VALUE, align 8
  %36 = icmp eq i64 %34, %35
  br i1 %36, label %37, label %41

37:                                               ; preds = %31
  %38 = load i32, i32* %4, align 4
  %39 = load i32*, i32** %3, align 8
  store i32 %38, i32* %39, align 4
  %40 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  store %struct.TYPE_6__* %40, %struct.TYPE_6__** %2, align 8
  br label %53

41:                                               ; preds = %31
  %42 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %43 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %42, i32 0, i32 1
  %44 = call i32 @LeaveCriticalSection(i32* %43)
  br label %45

45:                                               ; preds = %41, %24
  br label %46

46:                                               ; preds = %45
  %47 = load i32, i32* %4, align 4
  %48 = add nsw i32 %47, 1
  store i32 %48, i32* %4, align 4
  br label %7

49:                                               ; preds = %7
  %50 = call i32 @WARN(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str, i64 0, i64 0))
  %51 = load i32, i32* @ENFILE, align 4
  %52 = call i32* (...) @_errno()
  store i32 %51, i32* %52, align 4
  store %struct.TYPE_6__* @__badioinfo, %struct.TYPE_6__** %2, align 8
  br label %53

53:                                               ; preds = %49, %37, %20
  %54 = load %struct.TYPE_6__*, %struct.TYPE_6__** %2, align 8
  ret %struct.TYPE_6__* %54
}

declare dso_local %struct.TYPE_6__* @get_ioinfo_nolock(i32) #1

declare dso_local i32 @alloc_pioinfo_block(i32) #1

declare dso_local i32 @init_ioinfo_cs(%struct.TYPE_6__*) #1

declare dso_local i64 @TryEnterCriticalSection(i32*) #1

declare dso_local i32 @LeaveCriticalSection(i32*) #1

declare dso_local i32 @WARN(i8*) #1

declare dso_local i32* @_errno(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
